--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
+  <!-- <script src="https://kit.fontawesome.com/2822636e11.js" crossorigin="anonymous"></script> -->
+  <script
+  src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+  data-auto-a11y="true"
+></script>
   <meta charset="utf-8">
-  <title>RealEstate</title>
+  <title>Housing</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
